# Fund_Fcst_1

./: README.md  progress.md  project_plan.md
.github/: copilot-instructions.md
.github/instructions/: code_generation.instructions.md  testing.instructions.md
fund_analysis/: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
fund_analysis/config/: base.yaml  dev.yaml  prod.yaml
fund_analysis/docs/api/: README.md
fund_analysis/docs/developer/: README.md
fund_analysis/docs/user_guide/: README.md
fund_analysis/examples/analysis/: README.md
fund_analysis/examples/data_loading/: README.md
fund_analysis/examples/modeling/: README.md
fund_analysis/examples/scenarios/: README.md
fund_analysis/scripts/: setup_environment.py  validate_installation.py
fund_analysis/src/fund_analysis/analysis/: base.py
fund_analysis/src/fund_analysis/cli/: main.py
fund_analysis/src/fund_analysis/core/: config.py  di_container.py  interfaces.py
fund_analysis/src/fund_analysis/data/: base_loader.py
fund_analysis/src/fund_analysis/models/: base.py
fund_analysis/src/fund_analysis/scenarios/: base.py
fund_analysis/src/fund_analysis/utils/: helpers.py
fund_analysis/tests/: conftest.py
fund_analysis/tests/unit/: test_basic_imports.py
mcp/: mcp-server-lite.py
tasks/: task_1_1.md  task_1_2.md
